Adds feature to allow monitoring the pages/sec for memory, checking for performance bottlenecks

--- a/config/icinga/Invoke-IcingaCheckMemory.conf
+++ b/config/icinga/Invoke-IcingaCheckMemory.conf
@@ -4,7 +4,12 @@ object CheckCommand "Invoke-IcingaCheckMemory" {
     arguments += {
         "-Verbosity" = {
             value = "$IcingaCheckMemory_Int32_Verbosity$"
-            order = 8
+            order = 10
+        }
+        "-MemoryPagesSecCritical" = {
+            description = "Allows to set a Critical threshold for the Memory Pages/sec performance counter. This is using the default Icinga threshold handling."
+            value = "$IcingaCheckMemory_Object_MemoryPagesSecCritical$"
+            order = 7
         }
         "-ThresholdInterval" = {
             set_if = {{
@@ -50,7 +55,7 @@ object CheckCommand "Invoke-IcingaCheckMemory" {
                 ).join(",");
                 return "@(" + psarr + ")";
             }}
-            order = 7
+            order = 9
         }
         "-Warning" = {
             description = "Used to specify a Warning threshold. In this case an string value. The string has to be like, '20B', '20KB', '20MB', '20GB', '20TB', '20PB' This is using the default Icinga threshold handling. It is possible to enter e.g. 10% as threshold value if you want a percentage comparison."
@@ -65,6 +70,11 @@ object CheckCommand "Invoke-IcingaCheckMemory" {
         "-NoPerfData" = {
             set_if = "$IcingaCheckMemory_Switchparameter_NoPerfData$"
             order = 99
+        }
+        "-MemoryPagesSecWarning" = {
+            description = "Allows to set a Warning threshold for the Memory Pages/sec performance counter. This is using the default Icinga threshold handling."
+            value = "$IcingaCheckMemory_Object_MemoryPagesSecWarning$"
+            order = 6
         }
         "-PageFileWarning" = {
             description = "Allows to check the used page file and compare it against a size value, like '200MB' This is using the default Icinga threshold handling.  It is possible to enter e.g. 10% as threshold value if you want a percentage comparison."
@@ -92,11 +102,14 @@ object CheckCommand "Invoke-IcingaCheckMemory" {
                 ).join(",");
                 return "@(" + psarr + ")";
             }}
-            order = 6
+            order = 8
         }
     }
     vars.IcingaCheckMemory_Switchparameter_NoPerfData = false
     vars.ifw_api_arguments = {
+        "MemoryPagesSecWarning" = {
+            value = "$IcingaCheckMemory_Object_MemoryPagesSecWarning$"
+        }
         "Critical" = {
             value = "$IcingaCheckMemory_Object_Critical$"
         }
@@ -120,6 +133,9 @@ object CheckCommand "Invoke-IcingaCheckMemory" {
         }
         "ExcludePageFile" = {
             value = "$IcingaCheckMemory_Array_ExcludePageFile$"
+        }
+        "MemoryPagesSecCritical" = {
+            value = "$IcingaCheckMemory_Object_MemoryPagesSecCritical$"
         }
         "Verbosity" = {
             value = "$IcingaCheckMemory_Int32_Verbosity$"
