--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -454,7 +454,12 @@ object CheckCommand "Invoke-IcingaCheckMemory" {
     arguments += {
         "-Verbosity" = {
             value = "$IcingaCheckMemory_Int32_Verbosity$"
-            order = 8
+            order = 10
+        }
+        "-MemoryPagesSecCritical" = {
+            description = "Allows to set a Critical threshold for the Memory Pages/sec performance counter. This is using the default Icinga threshold handling."
+            value = "$IcingaCheckMemory_Object_MemoryPagesSecCritical$"
+            order = 7
         }
         "-ThresholdInterval" = {
             set_if = {{
@@ -500,7 +505,7 @@ object CheckCommand "Invoke-IcingaCheckMemory" {
                 ).join(",");
                 return "@(" + psarr + ")";
             }}
-            order = 7
+            order = 9
         }
         "-Warning" = {
             description = "Used to specify a Warning threshold. In this case an string value. The string has to be like, '20B', '20KB', '20MB', '20GB', '20TB', '20PB' This is using the default Icinga threshold handling. It is possible to enter e.g. 10% as threshold value if you want a percentage comparison."
@@ -515,6 +520,11 @@ object CheckCommand "Invoke-IcingaCheckMemory" {
         "-NoPerfData" = {
             set_if = "$IcingaCheckMemory_Switchparameter_NoPerfData$"
             order = 99
+        }
+        "-MemoryPagesSecWarning" = {
+            description = "Allows to set a Warning threshold for the Memory Pages/sec performance counter. This is using the default Icinga threshold handling."
+            value = "$IcingaCheckMemory_Object_MemoryPagesSecWarning$"
+            order = 6
         }
         "-PageFileWarning" = {
             description = "Allows to check the used page file and compare it against a size value, like '200MB' This is using the default Icinga threshold handling.  It is possible to enter e.g. 10% as threshold value if you want a percentage comparison."
@@ -542,11 +552,14 @@ object CheckCommand "Invoke-IcingaCheckMemory" {
                 ).join(",");
                 return "@(" + psarr + ")";
             }}
-            order = 6
+            order = 8
         }
     }
     vars.IcingaCheckMemory_Switchparameter_NoPerfData = false
     vars.ifw_api_arguments = {
+        "MemoryPagesSecWarning" = {
+            value = "$IcingaCheckMemory_Object_MemoryPagesSecWarning$"
+        }
         "Critical" = {
             value = "$IcingaCheckMemory_Object_Critical$"
         }
@@ -570,6 +583,9 @@ object CheckCommand "Invoke-IcingaCheckMemory" {
         }
         "ExcludePageFile" = {
             value = "$IcingaCheckMemory_Array_ExcludePageFile$"
+        }
+        "MemoryPagesSecCritical" = {
+            value = "$IcingaCheckMemory_Object_MemoryPagesSecCritical$"
         }
         "Verbosity" = {
             value = "$IcingaCheckMemory_Int32_Verbosity$"
@@ -3786,7 +3802,7 @@ object CheckCommand "Invoke-IcingaCheckUNCPath" {
 
     arguments += {
         "-WarningTotal" = {
-            description = "A warning threshold for the shares total free space in byte units, like '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
+            description = "A warning threshold for the shares free space in either % or byte units, like '20%:' or '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: %, B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
             value = "$IcingaCheckUNCPath_Object_WarningTotal$"
             order = 8
         }
@@ -3832,7 +3848,7 @@ object CheckCommand "Invoke-IcingaCheckUNCPath" {
             order = 10
         }
         "-CriticalTotal" = {
-            description = "A warning threshold for the shares total free space in byte units, like '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
+            description = "A critical threshold for the shares free space in either % or byte units, like '20%:' or '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: %, B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
             value = "$IcingaCheckUNCPath_Object_CriticalTotal$"
             order = 9
         }
@@ -5146,12 +5162,12 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 99
         }
         "-CriticalOther" = {
-            description = "The critical threshold for all other updates on the Windows machine"
+            description = "The critical threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalOther$"
             order = 12
         }
         "-WarningDefender" = {
-            description = "The warning threshold for the total pending update count on the Windows machine"
+            description = "The warning threshold for the Microsoft Defender update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningDefender$"
             order = 9
         }
@@ -5226,12 +5242,12 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 2
         }
         "-WarningSecurity" = {
-            description = "The warning threshold for the security update count on the Windows machine"
+            description = "The warning threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningSecurity$"
             order = 5
         }
         "-CriticalSecurity" = {
-            description = "The critical threshold for the security update count on the Windows machine"
+            description = "The critical threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalSecurity$"
             order = 6
         }
